[package]
name = "trail"
version = "0.1.0"
edition = "2021"
description = "Evidence-backed changelog generator — aggregates git, latch, probe, witness into work narratives"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
